--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 {% endblock pubdate %}
 
 {% block content %}
-<p>Hello World</p>
-{% endblock content %}
+{% for obj in harvard_park_homicides %}
+    {{ obj.first_name }} {{ obj.last_name }}<br>
+{% endfor %}
+{% endblock %}
